add sidebar for logout in searching-for-stays

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63157,3 +63157,67 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border: 0;
   padding: 0;
 }
+.dir.lksobbu[class][class] {
+  border: 1px solid var(--j-qkgmf);
+  border-radius: var(--i-g-gvoq);
+  padding: var(--jhzm-v-t);
+}
+.l171tj0s[class][class] {
+  color: var(--f-k-smk-x);
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  font-weight: var(--e-y-j-d-v-j);
+}
+.dir.l171tj0s[class][class] {
+  margin-bottom: var(--jhzm-v-t);
+}
+._1pcbldss {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  border-color: black !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--c-zdwk-p) !important;
+  line-height: var(--j-p-z-kco) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+  -webkit-transition: box-shadow 0.2s ease, -webkit-transform 0.1s ease,
+    transform 0.1s ease !important;
+  -moz-transition: box-shadow 0.2s ease, transform 0.1s ease !important;
+  transition: box-shadow 0.2s ease, -ms-transform 0.1s ease,
+    -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: -webkit-linear-gradient(
+    to right,
+    #e61e4d 0%,
+    #e31c5f 50%,
+    #d70466 100%
+  ) !important;
+  background: -moz-linear-gradient(
+    to right,
+    #e61e4d 0%,
+    #e31c5f 50%,
+    #d70466 100%
+  ) !important;
+  background: linear-gradient(
+    to right,
+    #e61e4d 0%,
+    #e31c5f 50%,
+    #d70466 100%
+  ) !important;
+  color: #ffffff !important;
+  width: 100% !important;
+}
