add tell us little more section in searching-for-stays

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63221,3 +63221,77 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #ffffff !important;
   width: 100% !important;
 }
+.tm818ve[class][class] {
+  font-size: var(--fy-rs-ca);
+  line-height: var(--d-ar-t-o-n);
+  font-weight: var(--jx-zk-pv);
+  color: var(--f-k-smk-x);
+}
+.dir.tm818ve[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+}
+@media (min-width: 375px) {
+  .dir.tm818ve[class][class] {
+    margin-top: var(--kc-t-qr-j);
+  }
+}
+.dir.cqmqvcq[class][class] {
+  margin-bottom: var(--kc-t-qr-j);
+}
+.d15dogh5[class][class] {
+  color: var(--fo-jk-r-s);
+  font-size: var(--c-zdwk-p);
+  line-height: var(--j-p-z-kco);
+  font-weight: var(--e-y-j-d-v-j);
+}
+.dir.d15dogh5[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+}
+.dir-ltr.d15dogh5[class][class] {
+  margin-left: -2px;
+}
+.dir.ocd8a5j[class][class] {
+  margin-top: var(--jaa-ni-h);
+}
+._smt4n2a {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+._1v5cvwv4 {
+  display: inline-block !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  height: 24px !important;
+  width: 24px !important;
+  text-align: center !important;
+  overflow: hidden !important;
+  vertical-align: top !important;
+  border-radius: 4px !important;
+  background: rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  border-color: rgb(34, 34, 34) !important;
+}
+._1oj8hra {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  display: block !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: 2px !important;
+  margin-left: 3px !important;
+  color: rgb(255, 255, 255) !important;
+}
+.o1qa0ptp[class][class] {
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  font-weight: var(--e-y-j-d-v-j);
+}
+._1yf4i4f {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+.dir.b1efsl54[class][class] {
+  margin-top: var(--ic-zlb-s);
+}
