--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63295,3 +63295,101 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.b1efsl54[class][class] {
   margin-top: var(--ic-zlb-s);
 }
+@media (min-width: 1128px) {
+  ._17ctt5 {
+    display: none !important;
+  }
+}
+.hotd59s[class][class] {
+  height: 1px;
+}
+.dir.hotd59s[class][class] {
+  margin: var(--kksqe-v) 0;
+  background-color: var(--j-qkgmf);
+  border: none;
+}
+._19nw8j1 {
+  position: relative !important;
+  -webkit-flex: 1 1 auto !important;
+  -ms-flex: 1 1 auto !important;
+  flex: 1 1 auto !important;
+  padding: 0 !important;
+}
+.dir.fh2sxkc[class][class] {
+  margin-bottom: var(--kksqe-v);
+}
+.dir.c13melw6[class][class] {
+  margin-bottom: 100px;
+}
+.cswkrk2[class][class] {
+  width: 100%;
+  bottom: 0;
+  position: fixed;
+}
+.dir.cswkrk2[class][class] {
+  border-top: solid 1px var(--j-qkgmf);
+  background-color: var(--f-mkcy-f);
+}
+.dir-ltr.cswkrk2[class][class] {
+  left: 0;
+}
+.f1hzn9q9[class][class] {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.dir.f1hzn9q9[class][class] {
+  margin-top: var(--jaa-ni-h);
+  padding-bottom: var(--jaa-ni-h);
+  padding-left: var(--jaa-ni-h);
+  padding-right: var(--jaa-ni-h);
+}
+._1ku51f04 {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: var(--f-k-smk-x) !important;
+  color: var(--f-mkcy-f) !important;
+  contain: paint !important;
+}
+._1ku51f04:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: var(--j-qkgmf) !important;
+  color: var(--f-mkcy-f) !important;
+}
+.dir.f1mxt855[class][class] {
+  margin: var(--cw-a-a-u-a) 0;
+}
+.t13l59hu[class][class] {
+  font-size: var(--y-g-ar-y);
+  line-height: var(--cb-pewj);
+}
+.dir.fuzmsn8[class][class] {
+  margin-bottom: var(--ikx-k-pe);
+}
+.dir.e1cinm2u[class][class] {
+  margin-top: var(--cw-a-a-u-a);
+}
+.dir.px0ctwl[class][class] {
+  margin-top: var(--cw-a-a-u-a);
+  margin-bottom: var(--kksqe-v);
+}
