Add #1 C and D (guest login/signup section and profile menu)

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66077,3 +66077,54 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin: 0px !important;
   padding: 0px !important;
 }
+.dir.i4tq7yb[class][class] {
+  padding: 10px 0;
+}
+.dir-ltr.i4tq7yb[class][class] {
+    padding-left: 20px;
+}
+
+.dir.lhaa7s2[class][class] {
+  margin: -8px 0 var(--cw-a-a-u-a);
+}
+@media (min-width: 744px) {
+  .dir.lhaa7s2[class][class] {
+    margin: 0 0 56px;
+  }
+}
+@media (min-width: 1128px) {
+  .dir.lhaa7s2[class][class] {
+    margin: 0 0 var(--fvsvry);
+  }
+}
+.dir.l4u7xar[class][class] {
+  border: 1px solid var(--j-qkgmf);
+  border-radius: var(--g-ki-r-rq);
+  padding: var(--ikx-k-pe);
+}
+.l4u7xar[class][class] {
+  display: flex;
+  flex: column;
+  justify-content: space-between;
+  color: var(--f-k-smk-x);
+}
+.dir.lm8if50[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+}
+.lm8if50[class][class] {
+  font-size: var(--g-zgv-nj);
+  line-height: var(--b-x-z-q-l-e);
+  font-weight: var(--jx-zk-pv);
+}
+.l454cyn[class][class] {
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  font-weight: var(--e-y-j-d-v-j);
+}
+.dir-ltr.lhievvu[class][class] {
+  margin-left: var(--ikx-k-pe);
+}
+.lhievvu[class][class] {
+  align-self: center;
+  width: 400px;
+}
