--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -46551,6 +46551,7 @@ video::cue {
     transform: none;
   }
 }
+
 @keyframes keyframe_1hvlqe7 {
   0% {
     opacity: 1;
@@ -64483,6 +64484,18 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     animation-name: keyframe_15p0df !important;
 }
 
+.hidden > ._1t0jy5tw {
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  overflow-y: auto !important;
+  background: rgb(34, 34, 34) !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+}
+
 ._vxvq8x {
     -webkit-box-pack: center !important;
     -webkit-box-align: end !important;
@@ -64569,12 +64582,58 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     animation-name: keyframe_d37zz3 !important;
 }
 
+.hidden ._1ucy1zjv {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+}
+
 @media (min-width: 744px) {
   ._1ucy1zjv {
     width: 100% !important;
     max-width: 568px !important;
     border-radius: 12px !important;
   }
+}
+
+._mvip18q {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+}
+
+@media (min-width: 744px) {
+._mvip18q {
+  width: 100% !important;
+  max-width: 568px !important;
+  border-radius: 12px !important;
+}
 }
 
 ._pa35zs {
@@ -65000,4 +65059,88 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: var(--f-k-smk-x) !important;
   color: var(--f-mkcy-f) !important;
   contain: paint !important;
+}
+
+._njcq40o {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    background: rgb(255, 255, 255) !important;
+    position: relative !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    max-height: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+    box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+    border-top-left-radius: 12px !important;
+    border-top-right-radius: 12px !important;
+    animation-duration: 400ms !important;
+    animation-iteration-count: 1 !important;
+    animation-fill-mode: both !important;
+    animation-name: keyframe_d37zz3 !important;
+    height: 100% !important;
+    padding-bottom: env(safe-area-inset-bottom, 0) !important;
+}
+
+@media (min-width: 744px) {
+  ._njcq40o {
+    width: 100% !important;
+    max-width: 568px !important;
+    border-radius: 12px !important;
+  }
+}
+
+._wyyf2n {
+  -webkit-box-align: center !important;
+  padding-top: 32px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+._1yf4i4f {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+
+._u13xd1 {
+  height: 40px !important;
+  width: 56px !important;
+  min-width: 56px !important;
+  border-radius: 4px !important;
+  margin-right: 12px !important;
+  margin-left: 12px !important;
+}
+
+._1mv7u80 {
+    font-size: 16px !important;
+    line-height: 20px !important;
+    font-weight: 800 !important;
+    color: rgb(34, 34, 34) !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 1 !important;
+    -webkit-box-orient: vertical !important;
+}
+
+@supports (overflow: clip) {
+  ._1mv7u80 {
+    overflow: clip !important;
+  }
+}
+
+._1d3v5tj {
+    color: rgb(113, 113, 113) !important;
+    line-height: 18px !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 1 !important;
+    -webkit-box-orient: vertical !important;
+}
+
+@supports (overflow: clip) {
+  ._1d3v5tj {
+    overflow: clip !important;
+  }
 }
