Add #1 A and B (searchbar interaction and keyword search)

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64515,3 +64515,102 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-self: center;
   width: 400px;
 }
+._1qrk4en {
+  -webkit-box-pack: center !important;
+  border: none !important;
+  background-color: rgb(221, 221, 221) !important;
+  color: rgb(113, 113, 113) !important;
+  border-radius: 50% !important;
+  padding: 4px !important;
+  display: flex !important;
+  justify-content: center !important;
+  outline: none !important;
+}
+.dir.cusudri[class][class] {
+  background: var(--f-mkcy-f);
+  box-shadow: var(--jx-b-v-zt);
+  border: var(--g-r-n-ycy);
+}
+.dir.cusudri[class][class]:hover {
+  background: var(--f-mkcy-f);
+}
+.s1teii9t[class][class] {
+  min-width: 80px;
+  max-width: 200px;
+  width: auto;
+}
+._l7ztla {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  text-align: center !important;
+  white-space: nowrap !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  -webkit-transform: translateX(-50%) translateY(-50%) !important;
+  -ms-transform: translateX(-50%) translateY(-50%) !important;
+  transform: translateX(-50%) translateY(-50%) !important;
+}
+._mr5az14 {
+  background-color: #222222 !important;
+  width: 6px !important;
+  height: 6px !important;
+  margin-right: 4px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  -webkit-animation-name: keyframe_1fk160q !important;
+  animation-name: keyframe_1fk160q !important;
+  -webkit-animation-duration: 0.8s !important;
+  animation-duration: 0.8s !important;
+  -webkit-animation-iteration-count: infinite !important;
+  animation-iteration-count: infinite !important;
+  -webkit-animation-timing-function: linear !important;
+  animation-timing-function: linear !important;
+  -webkit-animation-fill-mode: both !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  -webkit-animation-delay: -0.3s !important;
+  animation-delay: -0.3s !important;
+}
+._1pphas65 {
+  background-color: #222222 !important;
+  width: 6px !important;
+  height: 6px !important;
+  margin-right: 4px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  -webkit-animation-name: keyframe_1fk160q !important;
+  animation-name: keyframe_1fk160q !important;
+  -webkit-animation-duration: 0.8s !important;
+  animation-duration: 0.8s !important;
+  -webkit-animation-iteration-count: infinite !important;
+  animation-iteration-count: infinite !important;
+  -webkit-animation-timing-function: linear !important;
+  animation-timing-function: linear !important;
+  -webkit-animation-fill-mode: both !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  -webkit-animation-delay: -0.15s !important;
+  animation-delay: -0.15s !important;
+}
+._1x9afh0x {
+  background-color: #222222 !important;
+  width: 6px !important;
+  height: 6px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  -webkit-animation-name: keyframe_1fk160q !important;
+  animation-name: keyframe_1fk160q !important;
+  -webkit-animation-duration: 0.8s !important;
+  animation-duration: 0.8s !important;
+  -webkit-animation-iteration-count: infinite !important;
+  animation-iteration-count: infinite !important;
+  -webkit-animation-timing-function: linear !important;
+  animation-timing-function: linear !important;
+  -webkit-animation-fill-mode: both !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  margin-right: 0 !important;
+}
